--- a/app/partials/index_part.html
+++ b/app/partials/index_part.html
@@ -34,7 +34,7 @@ body{
 }
 /*礼物弹窗*/
 .swiper-container {
-  /*display: none;*/
+  display: none;
   position: fixed;
   width: 100%;
   height: 100%;
