--- a/app/css/index.css
+++ b/app/css/index.css
@@ -12,7 +12,9 @@ body {
   top: 12px;
   right: 15px;
   background: url(../img/index/gift.png) no-repeat center;
-  background-size: 22px; }
+  background-size: 22px;
+  z-index: 999;
+   }
 
 .gift-message {
   width: 22px;
