--- a/app/partials/bz_list.html
+++ b/app/partials/bz_list.html
@@ -50,7 +50,7 @@
 			<tr ng-repeat="item in data.second_coverages" class="bz_item" title="{{item.description}}" name="{{item.name}}">
 				<td class="left_td">
 					<img src="img/list_bz.jpg" >&nbsp;{{item.name}}</td>
-				<td style="text-align: center"><br>
+				<td style="text-align: center">
 					<span class="color_red">{{processMoney(item.sum_insured)}}</span>
 				</td>
 				<td  class="right_td">
