--- a/app/template/new/product_100.html
+++ b/app/template/new/product_100.html
@@ -47,15 +47,15 @@
 <div class="showknow-container" style="display: none;">
 	<div class="know-content">
 		<h4>1.承保年龄</h4>
-		<p>本产品承保年龄为16-65周岁（含16、65周岁），未成年人累计意外身故保额以保监会规定为准。</p>
-		<h4>2.承保范围</h4>
-		<p>为马拉松长跑运动人群提供意外伤害、公共交通工具及意外医疗基础保障，特含猝死及个人责任保障。</p>
-		<h4>3.投保限制</h4>
-		<p>在中国境内（不含港澳台）的外籍人士购买本产品需满足：在中国生活或工作半年以上或有居住证，但不承保回原国籍。</p>
+		<p>本产品承保年龄为18-80周岁（含18、80周岁）。</p>
+		<h4>2.保险起期</h4>
+		<p>本保险合同自您成功购买保险的次日零时开始生效，自生效日零时起开始承担保险责任。</p>
+		<h4>3.航班延误时间计算标准</h4>
+		<p>本保险采用的延误时间计算方式为自飞机原定到达时间起至飞机实际到达时间，或至航空公司安排的替代性交通工具的到达时间为止。</p>
 		<h4 class="hide">4.投保份数</h4>
-		<p class="hide">投保份数限定：被产品每一被保险人限投保一份。</p>
-		<h4 class="hide">5.承保区域</h4>
-		<p class="hide">本产品只承保中华人民共和国境内（不包含港澳台地区）的马拉松活动。</p>
+		<p class="hide">每位被保险人在同一天同一航班最多投保一份，多投无效。</p>
+		<h4 class="hide">5.受益人</h4>
+		<p class="hide">本保险的受益人为法定受益人。</p>
 
 	</div>
 	<div class="more-1-container ">
