--- a/app/partials/service.html
+++ b/app/partials/service.html
@@ -21,7 +21,7 @@
 
 
 
-<div class="phone-container"> <img src="img/temai/kefu.png">  客服电话 400-8080-988 </div>
+	<a href="tel:4009920205"><div class="phone-container"><img src="img/temai/kefu.png">  客服电话 400-9920-205 </div></a>
 
 
 
