--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -74,8 +74,22 @@
 	</div>
 </div>
 </div>
+<!--
 <div class=" btn_container" ng-show="loadReady">
 	<a href="tel:4009920205" class="btn btn_n_primary "  ><img src="img/temai/kefu.png"> <span>客服电话 </span>400-992-0205</a>
+</div>
+-->
+<a href="tel:4009920205" ><div class="phone-container" style="margin:20px 0 70px;"><img src="img/temai/kefu.png">  客服电话 400-9920-205 </div></a>
+<div class="fix_container select_btn ">
+    <div class="cell_hd cell_primary " >
+    <div class="cell-footer " ng-click="goIndex($event)"><div class="icon icon-home"></div><div>首页</div></div>
+    </div>
+    <div class="cell_hd cell_primary">
+      <div class="cell-footer hover" ng-click="goTemai($event)"><div class="icon icon-shopping"></div><div>严选</div></div>
+    </div>
+    <div class="cell_hd cell_primary">
+      <div class="cell-footer "  ng-click="goService($event)" ><div class="icon icon-service"></div><div>服务</div></div>
+    </div>
 </div>
 </div>
 <div class="qrcode-wrapper">
