--- a/app/sass/service.scss
+++ b/app/sass/service.scss
@@ -15,7 +15,7 @@ body{
 	.icon{
 		width:100%;
 		height:50px;
-		background: url('../img/service/camera.jpg') no-repeat center;
+		background: url('../img/service/camera.jpg?v=212') no-repeat center;
 		background-size:40px;
 	}
 }
