--- a/app/sass/temai_index.scss
+++ b/app/sass/temai_index.scss
@@ -201,3 +201,15 @@ header{
 		vertical-align: -3px;
 	}
 }
+
+.phone-container{
+	color:#588dd4;
+	margin-top:20px;
+	text-align:center;
+	font-size:15px;
+	margin-top:26px;
+	img{
+		width:20px;
+		vertical-align: -5px;
+	}
+}
