--- a/app/template/new/product_18.html
+++ b/app/template/new/product_18.html
@@ -8,7 +8,7 @@
 	<div class="introd-container">
 		<div class="detail-container">
 			<div>
-				<img src="img/product/ybzhyw01.png" ></div>
+				<img src="img/product/ybzhyw02.png" ></div>
 		</div>
 	</div>
 	<!--
@@ -52,8 +52,8 @@
 		<p>本产品不支持外籍人士购买。</p>
 		<h4 class="hide">3.投保份数</h4>
 		<p class="hide">本产品同一被保险人限投保1次，多投无效，保险公司不承担多投的保险责任。</p>
-		<h4 class="hide">4.承保职业限制</h4>
-		<p class="hide">本产品不承保职业包括：矿业采掘业（不包括办公室工作人员）、林业（不包括办公室工作人员）、海上作业人员、受训新兵、桥梁工程人员、石棉瓦操作工、特种部队、液化气油罐车司机及随车工人、武器弹药研究及管理人员、变压器操作工、高速公路、隧道、地下铁工程人员、拉线安装塔架工人、救难船员、消防员、潜水员、液化气体制造工人、职业运动员、水坝工程人员、海湾、港口工程人员、电缆、架空线操作及维修人员、爆炸品制造和爆破工作人员、军校、警校学员、交通及防暴警察、武打和特技演员、架空作业者、战地记者、前线军人、烟囱清洁工、酸类制造工、驯兽及饲养人员、无固定职业者、从事非法职业者。。</p>
+		<h4 class="hide">4.投保职业限制</h4>
+		<p class="hide">本产品不可投保职业包括：矿业采掘业（不包括办公室工作人员）、林业（不包括办公室工作人员）、海上作业人员、受训新兵、桥梁工程人员、石棉瓦操作工、特种部队、液化气油罐车司机及随车工人、武器弹药研究及管理人员、变压器操作工、高速公路、隧道、地下铁工程人员、拉线安装塔架工人、救难船员、消防员、潜水员、液化气体制造工人、职业运动员、水坝工程人员、海湾、港口工程人员、电缆、架空线操作及维修人员、爆炸品制造和爆破工作人员、军校、警校学员、交通及防暴警察、武打和特技演员、架空作业者、战地记者、前线军人、烟囱清洁工、酸类制造工、驯兽及饲养人员、无固定职业者、从事非法职业者。</p>
 
 	</div>
 	<div class="more-1-container ">
@@ -90,7 +90,7 @@
 		<li class="qa-item  question">
 			<div class="qa-icon "></div>
 			<div class="qa-content">
-				<div>发生意外如何理赔呢</div>
+				<div>发生意外如何理赔呢？</div>
 			</div>
 		</li>
 		<li class="qa-item answer">
