--- a/app/css/index.css
+++ b/app/css/index.css
@@ -13,7 +13,8 @@ body {
   right: 15px;
   background: url(../img/index/gift.png) no-repeat center;
   background-size: 22px;
-  z-index: 10; }
+  z-index: 10;
+  cursor: pointer; }
 
 .gift-message {
   width: 22px;
@@ -84,7 +85,7 @@ body {
   text-align: center;
   background-color: #1e4e8e;
   color: #4c87d6;
-  padding: 4.5px 0; }
+  padding: 7px 0 5px; }
   .cell-footer .icon, .cell-footer .icon_hover {
     height: 22px; }
   .cell-footer .icon.icon-home {
