--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -14,6 +14,7 @@ body {
   background: url(../img/index/gift.png) no-repeat center;
   background-size: 22px;
   z-index:10;
+  cursor: pointer;
 }
 .gift-message {
   width: 22px;
@@ -91,7 +92,7 @@ body {
   text-align: center;
   background-color: #1e4e8e;
   color: #4c87d6;
-  padding: 4.5px 0;
+  padding: 7px 0 5px;
 
   .icon, .icon_hover {
     height: 22px;
