--- a/app/partials/bz_ts.html
+++ b/app/partials/bz_ts.html
@@ -5,7 +5,7 @@
 			<div class="head_word"><span></span>提升建议</div>
 			<div class="head_state">
 				优先保障家庭经济支柱<br>
-				先报人后保物<br>
+				先保人后保物<br>
 				将每项提升至推荐分数
 			</div>
 		</div>
@@ -14,7 +14,7 @@
 			建议分值
 		</div>
 		<div class="head_right">
-			<div class="score">8.9</div>
+			<div class="score">8.0</div>
 			<div>一键提升</div>
 		</div>
 	</div>
@@ -30,19 +30,12 @@
 			<div class="quan_img" style="background: #df85ef;"><img src="img/bz_ts/jt.png"></div>
 			<div class="shuxian"></div>
 			<div class="quan_img" style="background: #f1de92;"><img src="img/bz_ts/cx.png"></div>
-
-			<!-- <div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div> -->
 		</div>
 		<div class="left pro_main_ctrl">
 			<div class="main_word" ng-click="goSelect(4)">
 				<div class="left">
 					<div class="main_head">意外保障</div>
-					<div class="change_word">造成意外损失大，建议优先提升</div>
+					<div class="change_word">发生后造成的损失大，建议优先提升</div>
 				</div>
 				<div class="right ts_btn">立即提升</div>
 			</div>
@@ -50,28 +43,28 @@
 			<div class="main_word" ng-click="goSelect(3)">
 				<div class="left">
 					<div class="main_head">人寿保障</div>
-					<div class="change_word">造成意外损失大，建议优先提升</div>
+					<div class="change_word">保障因身故造成的经济损失，建议提升</div>
 				</div>
 				<div class="right ts_btn">立即提升</div>
 			</div>
 			<div class="main_word" ng-click="goSelect(2)">
 				<div class="left">
 					<div class="main_head">健康保障</div>
-					<div class="change_word">造成意外损失大，建议优先提升</div>
+					<div class="change_word">先保重大疾病，再补充医疗报销，建议提升</div>
 				</div>
 				<div class="right ts_btn">立即提升</div>
 			</div>
 			<div class="main_word" ng-click="goContinue()">
 				<div class="left">
 					<div class="main_head">家庭保障</div>
-					<div class="change_word">造成意外损失大，建议优先提升</div>
+					<div class="change_word">先保家庭收入支柱，再保老人和小孩</div>
 				</div>
 				<div class="right ts_btn">立即提升</div>
 			</div>
 			<div class="main_word" ng-click="goContinue()">
 				<div class="left">
 					<div class="main_head">财产保障</div>
-					<div class="change_word">造成意外损失大，建议优先提升</div>
+					<div class="change_word">先保人后保物，优先保障价值大的财产</div>
 				</div>
 				<div class="right ts_btn">立即提升</div>
 			</div>
