--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -1,26 +1,5 @@
 <link rel="stylesheet" href="wx_bx_gl/css/swiper.min.css">
 <style>
-/*html{
-	width: 100%;
-	height: 100%;
-}
-body {
-	width: 100%;
-	height: 100%;
-}*/
-.ctrl_apcity {
-	width: 100%;
-	height: 100%;
-	background: #000;
-	opacity: .6;
-}
-.swiper-container {
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-}
 .swiper-container-horizontal>.swiper-pagination-bullets{
 	bottom: 7px;
 }
@@ -46,8 +25,8 @@ body {
 	<div class = "div_inline left">	保险本该如此</div>
 	<a href="javascript:;" class="focus_btn right" id="foucs_button">关 注</a>
 </header>
+<div class="swiper-container">
 	<div class="swiper-container" >
-		<div class="ctrl_apcity"></div>
 		<div class="swiper-wrapper swiper">
 			<div class="swiper-slide item " >
 				<a href="/wx_share.html#index"><img src="http://7xvrkw.com1.z0.glb.clouddn.com/huodong-1.jpg"></a>
@@ -60,6 +39,7 @@ body {
 		<!-- Add Pagination -->
 		<div class="swiper-pagination" style="text-align:center"></div>
 	</div>
+</div>
 <div class="nav">
 	<a href="/wx_share.html#jixian" class="item"><img src="img/temai/nav-1.png"><div >0元抢</div></a>
 	<a href="/wx_gl.html" class="item"><img src="img/temai/nav-2.png"><div>怎么买</div></a>
@@ -94,8 +74,22 @@ body {
 	</div>
 </div>
 </div>
+<!--
 <div class=" btn_container" ng-show="loadReady">
 	<a href="tel:4009920205" class="btn btn_n_primary "  ><img src="img/temai/kefu.png"> <span>客服电话 </span>400-992-0205</a>
+</div>
+-->
+<a href="tel:4009920205" ><div class="phone-container" style="margin:20px 0 70px;"><img src="img/temai/kefu.png">  客服电话 400-9920-205 </div></a>
+<div class="fix_container select_btn ">
+    <div class="cell_hd cell_primary " >
+    <div class="cell-footer " ng-click="goIndex($event)"><div class="icon icon-home"></div><div>首页</div></div>
+    </div>
+    <div class="cell_hd cell_primary">
+      <div class="cell-footer hover" ng-click="goTemai($event)"><div class="icon icon-shopping"></div><div>严选</div></div>
+    </div>
+    <div class="cell_hd cell_primary">
+      <div class="cell-footer "  ng-click="goService($event)" ><div class="icon icon-service"></div><div>服务</div></div>
+    </div>
 </div>
 </div>
 <div class="qrcode-wrapper">
