--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -13,6 +13,7 @@ body {
   right: 15px;
   background: url(../img/index/gift.png) no-repeat center;
   background-size: 22px;
+  z-index: 10000;
 }
 .gift-message {
   width: 22px;
