simple auto commit

--- a/app/partials/bz_ts.html
+++ b/app/partials/bz_ts.html
@@ -15,7 +15,7 @@
 		</div>
 		<div class="head_right">
 			<div class="score">8.9</div>
-			<div>一键提升</div>
+			<div style="display:none">一键提升</div>
 		</div>
 	</div>
 	<div class="promote_main">
