--- a/app/partials/index_part.html
+++ b/app/partials/index_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/index.css?rev=8778111a94178a0f8bf07917044cfc7a">
+<link rel="stylesheet" type="text/css" href="css/index.css?rev=d5826d0874ac3a7d75609d1c8ee78da2">
 <div id="wrapper" class="wrapper"  data-ng-init="init()">
 <div class="gift" id="gift" ></div>
   <div id="pieChartContainer">
@@ -12,7 +12,7 @@
     <p class="bd_yz" ng-click="goVerfiy()">保单验真 > </p>
   </div>
   -->
-  <div calss="cell">
+  <div calss="mag-container" style="margin-top:0.4rem;">
        <div class="cell_hd cell_primary">
              <div class="cell-circle " ng-click="goBdMange()"><div class="icon icon-mangment"></div><div>保单管理</div></div>
        </div>
