--- a/app/partials/service.html
+++ b/app/partials/service.html
@@ -2,20 +2,20 @@
 <div class="head" ng-click="goVerfiy()">
 	<div>
 		<div class="icon"> </div>
-		<div>保单验真</div>
+		<div style="margin-top:5px;">保单验真</div>
 	</div>
 </div>
 
 <div class="service-container">
-	<div class="service-item"  ng-click="goInsuranceCard()">  <div><div class="icon icon-juan"> </div> <div>我的保险劵</div></div></div>
-	<div class="service-item"  ng-click="goTradeRecord()">  <div><div class="icon icon-record"> </div> <div>交易记录</div></div></div>
-	<div class="service-item"  ng-click="goBaoDan()">  <div><div class="icon icon-bd"> </div> <div>我的保单</div></div></div>
+	<div class="service-item"  ng-click="goInsuranceCard()">  <div><div class="icon icon-juan"> </div> <div class="text">我的保险劵</div></div></div>
+	<div class="service-item"  ng-click="goTradeRecord()">  <div><div class="icon icon-record"> </div> <div class="text">交易记录</div></div></div>
+	<div class="service-item"  ng-click="goBaoDan()">  <div><div class="icon icon-bd"> </div> <div class="text">我的保单</div></div></div>
 </div>
 
 
 <div class="service-container">
-	<div class="service-item"  ng-click="goContact()">  <div><div class="icon icon-phone"> </div> <div>联系我们</div></div></div>
-	<div class="service-item"  ng-click="goAboutme()">  <div><div class="icon icon-logo"> </div> <div>关于诺贝</div></div></div>
+	<div class="service-item"  ng-click="goContact()">  <div><div class="icon icon-phone"> </div> <div class="text">联系我们</div></div></div>
+	<div class="service-item" ><a href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=407057806&idx=1&sn=d6136f57ac70f0ae4504c657355a6989#wechat_redirect" style="color:#555;">  <div><div class="icon icon-logo"> </div> <div class="text">关于诺贝</div></div></a></div>
 	<div class="service-item">  <div></div></div>
 </div>
 
