--- a/app/css/app.css
+++ b/app/css/app.css
@@ -256,27 +256,39 @@ footer {
   text-align: center;
   background-color: #1e4e8e;
   color: #4c87d6;
-  padding: 4.5px 0; }
-  .cell-footer .icon, .cell-footer .icon_hover {
-    height: 22px; }
-  .cell-footer .icon.icon-home {
-    background: url("../../img/index/index.png") no-repeat center;
-    background-size: 22px; }
-  .cell-footer .icon.icon-shopping {
-    background: url("../../img/index/shopping.png") no-repeat center;
-    background-size: 22px; }
-  .cell-footer .icon.icon-service {
-    background: url("../../img/index/service.png") no-repeat center;
-    background-size: 22px; }
+  padding: 7px 0 5px;
+}
+
+  .cell-footer  .icon, .icon_hover {
+      height: 22px;
+    }
+  .cell-footer   .icon.icon-home {
+      background: url("../../img/index/index.png") no-repeat center;
+      background-size: 22px;
+    }
+  .cell-footer   .icon.icon-shopping {
+      background: url("../../img/index/shopping.png") no-repeat center;
+      background-size: 22px;
+    }
+  .cell-footer   .icon.icon-service {
+      background: url("../../img/index/service.png") no-repeat center;
+      background-size: 22px;
+    }
+
 
 .cell-footer.hover {
-  color: #fff; }
-  .cell-footer.hover .icon.icon-home {
+  color: #fff;
+}
+
+ .cell-footer.hover .icon.icon-home {
     background: url("../../img/index/index_hover.png") no-repeat center;
-    background-size: 22px; }
+    background-size: 22px;
+  }
   .cell-footer.hover .icon.icon-shopping {
     background: url("../../img/index/shopping_hover.png") no-repeat center;
-    background-size: 22px; }
+    background-size: 22px;
+  }
   .cell-footer.hover .icon.icon-service {
     background: url("../../img/index/service_hover.png") no-repeat center;
-    background-size: 22px; }
+    background-size: 22px;
+  }
