--- a/app/css/service.css
+++ b/app/css/service.css
@@ -243,7 +243,7 @@ body {
   color: #fff; }
   .head .icon {
     width: 100%;
-    height: 50px;
+    height: 33px;
     background: url("../img/service/camera.jpg?v=212") no-repeat center;
     background-size: 40px; }
 
@@ -256,7 +256,7 @@ body {
   background-color: #FFF;
   color: #555; }
   .service-container .service-item {
-    height: 1.35rem;
+    height: 1.37rem;
     -webkit-box-flex: 1;
     -webkit-flex: 1;
     -moz-box-flex: 1;
@@ -282,6 +282,9 @@ body {
     border-right: 1px solid #e2e2e2;
     border-bottom: 1px solid #e2e2e2;
     line-height: 35px; }
+    .service-container .service-item .text {
+      line-height: 20px;
+      margin-top: 5px; }
     .service-container .service-item .icon {
       width: 100%;
       min-height: 25px; }
