--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -99,7 +99,8 @@
   var swiper = new Swiper('.swiper-container', {
         pagination: '.swiper-pagination',
         paginationClickable: true,
-        autoplay:5000
+        autoplay:5000,
+        loop : true
     });
 
   $()
