--- a/app/sass/service.scss
+++ b/app/sass/service.scss
@@ -14,7 +14,7 @@ body{
 	color:#fff;
 	.icon{
 		width:100%;
-		height:50px;
+		height:33px;
 		background: url('../img/service/camera.jpg?v=212') no-repeat center;
 		background-size:40px;
 	}
@@ -25,7 +25,7 @@ body{
 	background-color: #FFF;
 	color:#555;
 	.service-item{
-		height:1.35rem;
+		height:1.37rem;
 		@include flex(1);
 		@include flexbox;
 		@include align-items(center);
@@ -33,7 +33,10 @@ body{
 		border-right:1px solid #e2e2e2;
         border-bottom:1px solid #e2e2e2;
         line-height: 35px;
-
+		.text{
+			line-height: 20px;
+			margin-top:5px;
+		}
 		.icon{
 			width:100%;
 			min-height:25px;
