simple auto commit

--- a/app/template/new/product_22.html
+++ b/app/template/new/product_22.html
@@ -51,7 +51,8 @@
 
 			</div>
 			<div class="more-1-container ">
-				查看更多  <img src="img/temai/blue_arrow.jpg" />
+				查看更多  
+				<img src="img/temai/blue_arrow.jpg" />
 			</div>
 
 			<div class="button-container">
