--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/index.css?rev=ghghfhg">
+<link rel="stylesheet" href="wx_share/css/index.css?rev=231888220ed4fb1fbf9f8d5d420a87c2">
 <div class="my_bd_controller">
 	<ul class="layout ul_contrl">
 		<li >
