--- a/app/css/bz_ts.css
+++ b/app/css/bz_ts.css
@@ -279,7 +279,7 @@
   display: -ms-flexbox;
   display: flex; }
   .promote_ctrl .promote_main .main_left {
-    width: .7rem; }
+    width: 55px; }
     .promote_ctrl .promote_main .main_left .shuxian {
       width: 27px;
       height: 44px;
@@ -305,10 +305,17 @@
         height: .1px;
     } @else {
         width: .1px;
-    }*/ }
+    }*/
+    padding-top: 35px; }
     .promote_ctrl .promote_main .pro_main_ctrl .main_word {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex;
       overflow: auto;
-      padding: 32px 10px 0 0; }
+      height: 76px;
+      padding: 0 10px 0 0; }
       .promote_ctrl .promote_main .pro_main_ctrl .main_word .main_head {
         font-size: 16px;
         color: #555; }
@@ -317,11 +324,30 @@
         color: #999; }
       .promote_ctrl .promote_main .pro_main_ctrl .main_word .ts_btn {
         background: #5aa8ff;
-        width: 64px;
-        height: 24px;
+        width: 70px;
+        height: 30px;
         border-radius: 3px;
-        line-height: 24px;
+        line-height: 30px;
         text-align: center;
         font-size: 12px;
         color: #fff;
         margin-top: 10px; }
+      .promote_ctrl .promote_main .pro_main_ctrl .main_word .main_l {
+        -webkit-box-flex: 1;
+        -webkit-flex: 1;
+        -moz-box-flex: 1;
+        -ms-flex: 1;
+        flex: 1;
+        /*
+    @if $direction == column {
+        height: .1px;
+    } @else {
+        width: .1px;
+    }*/
+        padding-right: 10px; }
+    .promote_ctrl .promote_main .pro_main_ctrl .main2 {
+      height: 73px; }
+    .promote_ctrl .promote_main .pro_main_ctrl .main3 {
+      height: 74px; }
+    .promote_ctrl .promote_main .pro_main_ctrl .main4 {
+      height: 50px; }
