--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -63,7 +63,7 @@
 					<img class="logo" ng-src="{{policy.icon}}"   />
 					<div style="margin-right: 1rem;">
 						<div class="product">{{policy.name}}</div>
-						<div class="time" ><img src="img/clock.jpg"/>  <span >{{policy.coverageDate.substring(0,11)}} - {{policy.coverageDate.substring(20,30)}}</span> </div>
+						<div class="time" ><img src="img/clock.jpg"/>  <span >{{policy.coverageDate.substring(0,11)}} <span style="font-size: 12px;">至</span> {{policy.coverageDate.substring(20,30)}}</span> </div>
 					</div>
 					<div style="clear:both;"></div>
 
