--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -21,7 +21,7 @@
 			<img src="img/temai/logo.png">
 		</div>
 	</div>
-	<div class = "div_inline left">	保险本该如此</div>
+	<div class = "div_inline left">	每款产品都由诺贝严选</div>
 	<a href="javascript:;" class="focus_btn right" id="foucs_button">关 注</a>
 </header>
 <div class="swiper-container">
@@ -65,8 +65,8 @@
 			<div>
 				<div class="title">{{insurance.name}}</div>
 				<div class="des">
-					<span class="hot" style="display:none">热卖</span>
-					<span class="special_offer" style="display: none">特惠</span>  {{insurance.description}}</div>
+					<span class="hot" ng-if="insurance.status==4">热卖</span>
+					<span class="special_offer" ng-if="insurance.status==5">特惠</span>  {{insurance.description}}</div>
 				<div class="money">{{insurance.front_price}}</div>
 			</div>
 		</div>	
@@ -78,7 +78,7 @@
 	<a href="tel:4009920205" class="btn btn_n_primary "  ><img src="img/temai/kefu.png"> <span>客服电话 </span>400-992-0205</a>
 </div>
 -->
-<a href="tel:4009920205" ><div class="phone-container" style="margin:20px 0 70px;"><img src="img/temai/kefu.png">  客服电话 400-9920-205 </div></a>
+<a href="tel:4009920205" ><div class="phone-container" style="margin:20px 0 70px;"><img src="img/temai/kefu.png">  客服电话 400-992-0205 </div></a>
 <div class="fix_container select_btn ">
     <div class="cell_hd cell_primary " >
     <div class="cell-footer " ng-click="goIndex($event)"><div class="icon icon-home"></div><div>首页</div></div>
