--- a/app/sass/bz_ts.scss
+++ b/app/sass/bz_ts.scss
@@ -51,6 +51,7 @@
 				color: #fff;
 				text-align: center;
 				line-height: normal;
+				padding-top: 30px;
 			}
 			div:nth-child(2) {
 				width: 1.16rem;
@@ -67,11 +68,8 @@
 	}
 	.promote_main {
 	@include flexbox;
-		// img {
-		// 	width: .7rem;
-		// }
 		.main_left {
-			width: .7rem;
+			width: 55px;
 			.shuxian {
 				width: 27px;
 				height: 44px;
@@ -94,9 +92,12 @@
 		}
 		.pro_main_ctrl {
 		    @include flex(1);
+	        padding-top: 35px;
 			.main_word {
+				@include flexbox;
 				overflow: auto;
-				padding: 32px 10px 0 0;
+				height: 76px;
+				padding: 0 10px 0 0;
 				.main_head {
 					font-size: 16px;
 					color: #555;
@@ -107,17 +108,29 @@
 				}
 				.ts_btn {
 				background: #5aa8ff;
-				width: 64px;
-				height: 24px;
+				width: 70px;
+				height: 30px;
 				border-radius: 3px;
-				line-height: 24px;
+				line-height: 30px;
 				text-align: center;
 				font-size: 12px;
 				color: #fff;
 				margin-top: 10px;
 			}
+			.main_l {
+				@include flex(1);
+				padding-right: 10px;
 			}
-			
+			}
+			.main2 {
+				height: 73px;
+			}
+			.main3 {
+				height: 74px;
+			}
+			.main4 {
+				height: 50px;
+			}
 		}
 	}
 }
