--- a/app/wx_share/partials/jixian.html
+++ b/app/wx_share/partials/jixian.html
@@ -44,7 +44,7 @@
 		<a class="else_but" href="/#list?from=jixian">其他高保额极限运动险</a>
 		<div class="kong_div"></div>
 		<div class="padding_img">
-			<a href="/#detail?product_id=94&from=jixian">
+			<a href="/#temaidetail?product_id=94&from=jixian">
 				<div class="churchyard">
 				<img src="wx_share/img/sports/churchyard.png">
 				<div class="churchyard_word">
@@ -57,7 +57,7 @@
 			</a>
 			</div>
 			<div class="kong_div"></div>
-			<a href="/#detail?product_id=64&?from=jixian">
+			<a href="/#temaidetail?product_id=64&?from=jixian">
 				<div class="overseas">
 					<img src="wx_share/img/sports/overseas.png">
 					<div class="overseas_word">
