--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -188,14 +188,14 @@
 					<p class="logo">
 						<img  src="img/picc_logo.jpg"/>
 					</p>
-					平安7天意外险
+					爱心天使7天综合意外险
 				</div>
 				<!-- <div class="btnline"> </div> -->
 				<div class="example">示例保单</div>
 				<div>
 					<div class="bd-number">
 						<span class="gray fontW">保单号：</span>
-						10020200120342
+						22000000001528 
 					</div>
 					<div class="insured-name">
 						<span class="gray fontW">被保人：</span>
@@ -214,7 +214,7 @@
 						<td>
 							<span class="gray">综合意外</span>
 						</td>
-						<td  class="right-border blue">80000000.00</td>
+						<td  class="right-border blue">100000.00</td>
 						<td  rowspan="3" class="blue" style="vertical-align: middle;text-align: center;">
 							128.00
 							<br/>
@@ -225,13 +225,13 @@
 						<td>
 							<span class="gray">航空意外</span>
 						</td>
-						<td  class="right-border blue">200000000.00</td>
+						<td  class="right-border blue">2000000.00</td>
 					</tr>
 					<tr class="bd_tr">
 						<td>
 							<span class="gray">火车意外</span>
 						</td>
-						<td  class="right-border blue">60000.00</td>
+						<td  class="right-border blue">100000.00</td>
 					</tr>
 
 					<tr class="bd_tr">
@@ -241,7 +241,7 @@
 								<img src="img/cover.png" style="position: absolute;top:0.1rem;left:0.5rem;width:0.8rem;" />
 							</div>
 						</td>
-						<td colspan="2">2016.05.06 00:00:00-2020.05.05 24:00:00</td>
+						<td colspan="2">2016.03.03 00:00:00-2016.03.09 24:00:00</td>
 					</tr>
 				</table>
 
@@ -282,7 +282,7 @@
 					<tr >
 						<td>
 							<span class="gray fontW">证件号:</span>
-							4324323423****32423
+							4209841984****2423
 						</td>
 					</tr>
 				</table>
@@ -299,7 +299,7 @@
 					<tr >
 						<td>
 							<span class="gray twowid">电话:</span>
-							15638332323423
+							15600001234
 						</td>
 					</tr>
 					<tr >
@@ -316,13 +316,13 @@
 					<tr >
 						<td>
 							<span class="gray">销售机构:</span>
-							中国平安保险
+							北京分公司
 						</td>
 					</tr>
 					<tr >
 						<td>
 							<span class="gray">业务员(代码):</span>
-							马三 901029812737
+							马三 600000001368
 						</td>
 					</tr>
 
