--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -95,12 +95,12 @@
 		<li ng-click="goDetail('test')"  ng-if="data.policies.length == 0" >
 			<div class="wrapper">
 				<div class="bg"></div>
-				<div class="title">保单号:231312312312 <span class="example">示例保单</span></div>
+				<div class="title">保单号:22000000001528 <span class="example">示例保单</span></div>
 				<div class="des ">
 					<img class="logo" src="img/picc_logo.jpg" />
 					<div style="margin-right: 1rem;">
 						<div class="product">中国人保|爱心天使7天综合意外险</div>
-						<div class="time"><img src="img/clock.jpg"/>2016.03.03-2016.04.05</div>
+						<div class="time"><img src="img/clock.jpg"/>2016.03.03至2016.03.10</div>
 					</div>
 					<div style="clear:both;"></div>
 					<div class="status success"></div>
