--- a/app/template/new/product_128.html
+++ b/app/template/new/product_128.html
@@ -53,7 +53,7 @@
 		<h4>3.投保限制</h4>
 		<p>在中国境内（不含港澳台）的外籍人士购买本产品需满足：在中国生活或工作半年以上或有居住证，但不承保回原国籍。</p>
 		<h4 class="hide">4.投保份数</h4>
-		<p class="hide">投保份数限定：被产品每一被保险人限投保一份。</p>
+		<p class="hide">本产品每一被保险人限投保一份。</p>
 		<h4 class="hide">5.承保区域</h4>
 		<p class="hide">本产品只承保中华人民共和国境内（不包含港澳台地区）的马拉松活动。</p>
 
@@ -85,7 +85,7 @@
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
 				<div>
-					您好！这款“众行天下”马拉松保障计划最早的生效日期为网上投保的次日零时。您在需要参见马拉松前一天晚上24时之前完成投保并支付都是可以享受保障的。
+					您好！这款“众行天下”马拉松保障计划最早的生效日期为网上投保的次日零时。您在需要参加马拉松前一天晚上24时之前完成投保并支付都是可以享受保障的。
 				</div>
 			</div>
 		</li>
